# Auto-grad-and-MLP-implementation

./: .gitignore  CMakeLists.txt  Classification_Task.ipynb  Demo.ipynb  MLP_Tutorial.ipynb  README.md  Value.py  Value_Tutorial.ipynb  demo.ipynb  test_engine.py
Engine/: MLP.cpp  Value.cpp  module.cpp
Python Version/: MLP.py
Utils/: Draw_nn.py
